2004-07-15  Karl Runge <runge@karlrunge.com>
	* make "modtweak" the default, disable with -nomodtweak.  this
	  corrects ghost "< >" key on pc104 us in XFree86.
	* fix bug wrt no got_keyboard_input under modtweak

2004-07-10  Karl Runge <runge@karlrunge.com>
	* -norepeat to turn off X server autorepeat when clients exist,
	  (this is workaround for the repeating keystroke bug.  Note that
	  client side does autorepeating so not a big loss).

2004-07-04  Karl Runge <runge@karlrunge.com>
	* extend -allow to re-read a file with allowed IP addresses. 
	* improvements to -help text.

2004-07-01  Karl Runge <runge@karlrunge.com>
	* improve scaled grid calculation to prevent drift (which causes
	  drift in pixel weights and poorer tightvnc compression)
	* add ":pad" scale option, detect small fraction scale = m/n.

2004-06-28  Karl Runge <runge@karlrunge.com>
	* round scaled width to multiple of 4 to make vncviewer happy.
	* allow override of above ":n4" and allow 4 point interpolation
	  to be used even with shrinking ":in". 

2004-06-27  Karl Runge <runge@karlrunge.com>
	* speed up scaling a bit for slow machines (still all floating point)
	* add no blending option (-scale fraction:nb)

2004-06-26  Karl Runge <runge@karlrunge.com>
	* add -scale fract for global (not per-client) server-side scaling
	  working more or less OK, needs to be optimized at some point.
	* remove -hints/-nohints options.

2004-06-17  Karl Runge <runge@karlrunge.com>
	* simple ~/.x11vncrc config file support, -rc, -norc

2004-06-12  Karl Runge <runge@karlrunge.com>
	* add -clear_mods -clear_keys for (rare) case where keys are
	  not being released (e.g. Ctrl-C x11vnc thru x11vnc).
	* export RFB_SERVER_IP and RFB_SERVER_PORT to -accept program
	  so that the tcp 4-tuple is completely specified.  
	* add -storepasswd <pass> <file> so storepasswd program not needed

2004-06-05  Karl Runge <runge@karlrunge.com>
	* rearrange file for easier maintenance, indicating file breakup.